fix safari image stretch bug

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -35,20 +35,22 @@
 
   .header__link {
     display: flex;
+    justify-content: center;
+    align-items: center;
     box-sizing: content-box;
-    width: 100%;
-    height: 100%;
     margin-left: 5px;
     margin-bottom: 2.5px;
+    width: 100%;
+    height: 100%;
 
     &--logo {
+      margin-left: 15px;
       margin-bottom: 0;
     }
   }
 
   .header__logo {
     max-width: 38px;
-    margin-left: 10px;
   }
 
   &__company {
